tests/conformance/negative/11-unknown-define-value.sml
<!-- INVALID: unknown define value -->
<!-- Expected: ValidationError::UnknownDefineValue -->
<skill define="something-else" name="bad">
  define must be "interface" or "implementation".
</skill>
